# simple-llm-chat-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  chat.py  config.py  const.py
src/providers/: __init__.py  base.py  chatgpt.py  claude.py
src/ui/: __init__.py  spinner.py
